--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kim Hoang</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <base href="/">
     <script type="module" src="/index.js" defer></script>
 </head>
